Fix vertical align for svg's with tailwind+antd

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Override base SVG style to work with Ant Design */
+svg {
+  vertical-align: initial;
+}
